--- a/StaffoutputAddIn/StaffoutputAddIn.csproj
+++ b/StaffoutputAddIn/StaffoutputAddIn.csproj
@@ -34,7 +34,7 @@
     <PublishUrl>C:\Users\chris\OneDrive\Dokumente\Visual Studio 2015\Projects\StaffoutputAddIn\Setup IWM-Stundenabrechnung\</PublishUrl>
     <InstallUrl />
     <TargetCulture>de</TargetCulture>
-    <ApplicationVersion>1.0.0.4</ApplicationVersion>
+    <ApplicationVersion>1.0.0.6</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateInterval>0</UpdateInterval>
@@ -231,11 +231,10 @@
     <ManifestCertificateThumbprint>6F8534004E3290E3CEDE79D4CB5D23F1C1AF9C2E</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>StaffoutputAddIn_1_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <!-- Include the build rules for a C# project. -->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
